Fixes Spacing with branded collections
SRFCMSAL-1950

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -35,7 +35,10 @@ $background-overlap-wide: 50px;
 
       &.collection--branded {
         margin-bottom: 0;
-      }
+
+        .collection__branding-wrapper
+          padding-bottom: 32px;
+        }
     }
 
     @include desktop-wide {
@@ -43,6 +46,10 @@ $background-overlap-wide: 50px;
 
       &.collection--branded {
         margin-bottom: 0;
+
+        .collection__branding-wrapper
+          padding-bottom: 40px;
+        }
       }
     }
 
